--- a/src/web/create.html
+++ b/src/web/create.html
@@ -14,18 +14,17 @@
             <div class="col-md-3">
                 <qr text="qrText" image="true" correction-level="'H'"></qr>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-5">
                 <p style="margin-top: 12px;">Identificador: {{uniqueId}}</p>
                 <br>
                 <p>Nombre: {{name}}</p>
                 <br>
-                <p>Lugar: </p>
+                <p>Lugar: C/ Xavier Puig i Andreu,   nº 12-14, 25005 Lleida</p>
                 <br>
-                <p>Hora: 21:00</p>
+                <p>Hora: 21:45</p>
                 <br>
                 <p>Precio: 10€</p>
             </div>
-            <div class="col-md-2"></div>
             <div class="col-md-3">
              <img ng-src="{{image}}" style="width: 250px;height: 250px;float: left;">
             </div>
