--- a/src/web/show.html
+++ b/src/web/show.html
@@ -1,3 +1,1 @@
-<h2>show</h2>
-
-<img ng-src="{{image}}" style="width: 250px;height: 250px;float: left;">
+<img ng-src="{{image}}" style="width: 100%;height: 100%;    position: fixed;top: 0;left: 0;">
