--- a/src/web/photo.html
+++ b/src/web/photo.html
@@ -1,4 +1,6 @@
-
+<div class="wrapper" ng-if="counterShow == true">
+<label style="position: fixed;z-index: 9;color: white;font-size: 145px;"> {{counter}} </label>
+</div>
 <div class="wrapper">
 <button ng-click="start()" class="button btn btn-primary" ng-if="startPhoto == false">Start</button>
 </div>
